# wired-memory

./: .gitignore  CLAUDE.md  CMakeLists.txt  Libs  README.md
.proq/: project.json
.proq/agents/: 019d8e00-66ce-7468-8f43-00f165192f3c.json  019d9894-1956-7792-8741-c8de3ae0a513.json  019d9d64-6f47-704f-a2f3-18f0799f9001.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/capture/: AudioRingBuffer.h  SCKAudioCapture.h  SCKAudioCapture.mm
agents/: pipeline-god.md  product-engineer.md
docs/: CHORD_GENERATOR_PLAN.md  UI_STRATEGY.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  design.css  juce-framework-frontend.d.ts  juce-stub.ts  main.tsx  plugin-bridge.ts
ui/src/lib/: useJuceParam.ts
ui/src/r3f/: ExampleScene.tsx  ThreeCanvas.tsx
